--- a/Pages/full_register.html
+++ b/Pages/full_register.html
@@ -42,7 +42,7 @@
         }
         try {
             let str =JSON.stringify({ user_name: uName, user_password: uPassword })
-            const response = await fetch('/api/user_by_params?user_name=' + encodeURIComponent(uName) + '&user_password=' + encodeURIComponent(uPassword), {
+            const response = await fetch('/api/users?user_name=' + encodeURIComponent(uName) + '&user_password=' + encodeURIComponent(uPassword), {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -57,7 +57,7 @@
          
         } catch (error) {
             console.error('Ошибка:', error);
-            alert('Ошибка: ' + error.message);
+            alert('Ошибка1: ' + error.message);
         }
     }
 </script>
