--- a/Pages/main.html
+++ b/Pages/main.html
@@ -123,8 +123,18 @@
         <p class="total-price">Цена: 150 руб.</p>
         <button class="add-to-cart" onclick="addToCart(this)">В корзину</button>
     </div>
-    <!-- Добавьте больше напитков здесь -->
+     <div class="product" data-price="200">
+        <img src="../Styles/img/drink1.jpg" alt="Милкшейк с клубникой">
+        <h2>Милкшейк с клубникой</h2>
+        <p>Свежий охлажденный милкшейк со вкусом клубники, 0,5 л</p>
+        <div class="input-group quantity_goods" style="margin: 5px 0;">
+            <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
+        </div>
+        <p class="total-price">Цена: 200 руб.</p>
+        <button class="add-to-cart" onclick="addToCart(this)">В корзину</button>
+    </div>
 </div>
+
 
 <h2 id="other">Другое</h2><!--TODO: Карч вася сделай мине так чтоб вах прадукт брал ценник с эбучий json-->
 <div class="contain" id="product-container"></div>
